Update use of asdf and versions and new plugins